--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2>Monday, November 13th</h2>
     <h2>6.00 pm</h2>
     <h2>Venue:</h2>
-    <h4>Near Jijamata Highscool, Colony no.28, Bhenda Factory, Bhenda</h4>
+    <h4>Near Jijamata Highschool, Colony no.28, Bhenda Factory, Bhenda</h4>
     <h2>Venue Link is available below: </h2>
     <a href ="https://maps.app.goo.gl/CfbsAXP4gxobidwJ9">click here</a>
 </body>
